# men-among-gods

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  ResourceLocations.h.in  create_release_packages.ps1  create_release_packages.sh  install_dev_dependencies.sh  playerLog.json  server.Dockerfile  vcpkg.json
new_gfx/: Red_Carpet_Corner.blend  Red_Carpet_Corner.blend1  Red_Carpet_Sides.blend  blue_candlestick.blend  candlestick.blend  eyes.blend  fence_l_bend_.blend  fence_reversed.blend  fence_straigth.blend  grass.blend  jamils_amulet.blend  lamppost.blend  marble_floor.blend  marble_pillar.blend  marble_pillar_hidden.blend  pfc_rank.blend  private.blend  shrine.blend  sign.blend  skeleton_jewel.blend  (+2 more)
src/MenAmongGods/: CMakeLists.txt  Cargo.toml  playerLog.json
src/MenAmongGods/src/: main.rs
src/api/: AccountApi.cpp  AccountApi.h  CMakeLists.txt  CharacterTemplateApi.cpp  CharacterTemplateApi.h  ItemTemplateApi.cpp  ItemTemplateApi.h  apiTypes.h  main.cpp
src/api/models/: character.cpp  character.h  constants.h  item.cpp  item.h  skilltab.cpp  skilltab.h
src/common/: CMakeLists.txt  Character.cpp  Character.h  Constants.h  DriverConstants.h  EquipmentConstants.h  InventoryConstants.h  Item.cpp  Item.h  MapConstants.h  Player.h  RaceAndSex.h  RankNames.cpp  RankNames.h  SkillCostCalculations.h  SkillTab.cpp  SkillTab.h
src/new_client/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ClientMessage.h  ClientNetworkActivity.cpp  ClientNetworkActivity.h  ClientTypes.h  Compressor.cpp  Compressor.h  ConstantIdentifiers.h  Encoder.h  Map.cpp  Map.h  PlayerData.cpp  PlayerData.h  ServerMessage.cpp  ServerMessage.h  TickBuffer.cpp  TickBuffer.h  gfx-load-test.cpp  main.cpp  server_message_processing.cpp  server_message_processing.h
src/new_client/clientlib/: CMakeLists.txt  ClientConfiguration.cpp  ClientConfiguration.h  ClientConnection.cpp  ClientConnection.h  ClientMessage.cpp  ClientNetworkActivity.cpp  ClientNetworkActivity.h  ClientTypes.h  Compressor.cpp  Compressor.h  ConstantIdentifiers.h  ConversionUtilities.h  Encoder.cpp  Map.cpp  Map.h  PlayerData.cpp  PlayerData.h  ServerMessage.cpp  TickBuffer.cpp  TickBuffer.h
src/new_client/clientlib/commands/: AttackCommand.cpp  AttackCommand.h  AutoLookCommand.cpp  AutoLookCommand.h  ChallengeCommand.cpp  ChallengeCommand.h  ClientCommand.h  DropCommand.cpp  DropCommand.h  ExitCommand.cpp  ExitCommand.h  GiveCommand.cpp  GiveCommand.h  InventoryCommand.cpp  InventoryCommand.h  InventoryLookCommand.cpp  InventoryLookCommand.h  LoginCommand.cpp  LoginCommand.h  LookCommand.cpp  LookCommand.h  LookItemCommand.cpp  LookItemCommand.h  ModeCommand.cpp  ModeCommand.h  MoveCommand.cpp  MoveCommand.h  NewLoginCommand.cpp  NewLoginCommand.h  PasswordCommand.cpp  PasswordCommand.h  PickupCommand.cpp  PickupCommand.h  ResetCommand.cpp  ResetCommand.h  SayCommand.cpp  SayCommand.h  SetUserCommand.cpp  SetUserCommand.h  ShopCommand.cpp  (+13 more)
src/new_client/config/: config.json
src/new_client/electron_app/men-among-gods/: .gitignore  package-lock.json  package.json
src/new_client/electron_app/men-among-gods/public/: electron.js  index.html  renderer.js
src/new_client/electron_app/men-among-gods/src/: App.tsx  CharacterInput.tsx  RaceSelection.tsx  SexSelection.tsx  index.html  index.ts  preload.ts  renderer.tsx
src/new_client/fonts/: onuava__.ttf:Zone.Identifier
src/new_client/interfacelib/: CMakeLists.txt  ColorPalette.h  CommandHistory.cpp  CommandHistory.h  Component.cpp  Component.h  FontCache.cpp  FontCache.h  GraphicsCache.cpp  GraphicsCache.h  GraphicsIndex.cpp  GraphicsIndex.h  GuiFormatters.h  JustifiableText.cpp  JustifiableText.h  LifeDisplay.cpp  LoadButtonDisplay.cpp  LoadButtonDisplay.h  LoginUi.cpp  LoginUi.h  MainUi.cpp  MainUi.h  MapDisplay.cpp  MapDisplay.h  MiniMapDisplay.cpp  MiniMapDisplay.h  NewButtonDisplay.cpp  NewButtonDisplay.h  PasswordTextInputDisplay.cpp  PasswordTextInputDisplay.h  PlayerEquipmentDisplay.cpp  PlayerEquipmentDisplay.h  PlayerInventoryDisplay.cpp  PlayerInventoryDisplay.h  PlayerLogDisplay.cpp  PlayerLogDisplay.h  PlayerShopDisplay.cpp  PlayerShopDisplay.h  PlayerTextInputDisplay.cpp  PlayerTextInputDisplay.h  (+21 more)
src/new_client/interfacelib/config/: gfxConfig.json
src/new_client/interfacelib/test_applications/: gfx-idx-load.cpp  gfx-load-test.cpp  gfx-login-ui.cpp  gfx-progress-bar.cpp  gfx-text-test.cpp  ui-gui-demo.cpp
src/new_client/interfacelib/test_files/: mapfile.archive  player.archive
src/new_client/loglib/: CMakeLists.txt  Logger.cpp  Logger.h  test.cpp
src/new_client/ui_mockups/: CMakeLists.txt  ColorPalette.h  Component.h  GraphicsCache.cpp  GraphicsCache.h  GraphicsIndex.cpp  GraphicsIndex.h  GuiFormatters.h  JustifiableText.cpp  JustifiableText.h  LifeDisplay.cpp  LifeDisplay.h  LoginUi.cpp  LoginUi.h  MainUi.cpp  MainUi.h  Map.cpp  Map.h  MapDisplay.cpp  MapDisplay.h  PasswordTextInputDisplay.cpp  PasswordTextInputDisplay.h  PlayerInventoryDisplay.cpp  PlayerInventoryDisplay.h  PlayerLogDisplay.cpp  PlayerTextInputDisplay.cpp  PlayerTextInputDisplay.h  RadioButtonDisplay.cpp  RadioButtonDisplay.h  SkillDisplay.cpp  SkillDisplay.h  SkillsAndAttributes.cpp  SkillsAndAttributes.h  SkillsAndAttributesDisplay.cpp  SkillsAndAttributesDisplay.h  SubmitButtonDisplay.cpp  SubmitButtonDisplay.h  TextBox.cpp  TextBox.h  TextInput.cpp  (+12 more)
src/server/: CMakeLists.txt  Makefile  README  acct.c  area.c  area.cpp  build.cpp  ccp_driver.cpp  cityattack.c  cityattack.cpp  client.h  data.h  driver.cpp  driver_etc.cpp  driver_generic.cpp  funcs.h  gendefs.h  helper.c  helper.cpp  info.cgi  info.cpp  lab9.c  lab9.cpp  look_driver.cpp  macros.h  npc_malte.cpp  password.cpp  path.cpp  populate.cpp  respawn.c  respawn.cpp  server.c  server.cpp  server_lastgate.c  skill_driver.cpp  stunrun.c  stunrun.cpp  svr_act.cpp  svr_disk.cpp  svr_do.c  (+9 more)
src/server/cgi/: acct.cgi
src/server/cgilib/: cgi-lib.c
src/test/: CMakeLists.txt  CommandHistoryTests.cpp  ConversionTests.cpp  GuiFormatterTests.cpp  LoggingTests.cpp
(+62 files in other folders)
