[package]
name = "men_among_gods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
env_logger = "0.10.0"
interprocess = "1.2.1"
serde_json = "1.0.96"
tinyfiledialogs = "3.9.1"
